@@ -5,6 +5,15 @@
 # It is suggested that you use the `simp-gnome` module and enable MATE support
 # for use with x2go.
 #
+# @param client
+#   Whether or not the system is a x2go client
+#
+# @param server
+#   Whether or not the system is a x2go server
+#
+# @param package_ensure
+#   The state that packages managed by this module should be in
+#
 # @author https://github.com/simp/pupmod-simp-x2go/graphs/contributors
 #
 class x2go (
