@@ -12,18 +12,6 @@
   ],
   "dependencies": [
     {
-      "name": "simp/dconf",
-      "version_requirement": ">= 0.0.1 < 2.0.0"
-    },
-    {
-      "name": "simp/gnome",
-      "version_requirement": ">= 8.0.0 < 9.0.0"
-    },
-    {
-      "name": "simp/mate",
-      "version_requirement": ">= 1.0.0 < 2.0.0"
-    },
-    {
       "name": "simp/simplib",
       "version_requirement": ">= 3.3.1 < 5.0.0"
     },
